Updated the source path of the css files

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,6 +1,6 @@
 LeftAndMain:
   extra_requirements_css:
-    - flat-cms/css/style.css
+    - flat-cms/styles/css/style.css
   extensions:
     - FlatCMSLeftAndMainExtension
 
