Icons are back in the mix now

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -22,3 +22,10 @@ SecurityAdmin:
 
 CMSSettingsController:
   icon: cogs
+
+KickAssets:
+  icon: folder-open
+  menu_title: Browse Files
+
+MenuAdmin:
+  icon: th-list
