--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
     {
       "name": "Jaydn de Graaf",
       "homepage": "http://pinc.nz/",
-      "role": "Developer" 
+      "role": "Developer"
     }
   ],
   "require": {
-    "silverstripe/framework": ">=3.0.1,<3.2",
-    "composer/installers": "*"
+      "composer/installers": "*",
+      "silverstripe/cms": ">=3.0.1,<3.4",
+      "silverstripe/framework": ">=3.0.1,<3.4"
   }
 }
