--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
       "composer/installers": "*",
-      "silverstripe/cms": ">=3.0.1,<3.4",
-      "silverstripe/framework": ">=3.0.1,<3.4"
+      "silverstripe/cms": "~3.1",
+      "silverstripe/framework": "~3.1"
   }
 }
